syntax = "proto3";

option csharp_namespace = "Grpc.Protos";

service ChatService {
  rpc OpenStream(Request) returns (stream Response);
}








message Request{
  string UserId = 1;
}

message Response {
  string data = 1;
}

